styles: correct z-index toast

--- a/src/components/ui/toast/toast.module.scss
+++ b/src/components/ui/toast/toast.module.scss
@@ -13,7 +13,7 @@
   line-height: 24px;
   font-weight: 600;
   border-radius: 5px;
-  z-index: 10;
+  z-index: 600;
 
   &.positive {
     border: 2px solid var(--positive);
